--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <h1>Enter Today's Pockets</h1>
+  <h1>Enter Today's Pocketsz</h1>
   <form id="entryForm">
     <input type="text" id="name" placeholder="Your Name" required />
     <input type="number" id="pockets" placeholder="Number of Pockets" required min="0" />
