--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pocket Game</title>
+  <title>Pocketwhack</title>
   <style>
     /* Basic styling */
     body { font-family: Arial, sans-serif; margin: 20px; }
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <h1>Enter Today's Pocketsz</h1>
+  <h1>Enter Today's Pocketz v2</h1>
   <form id="entryForm">
     <input type="text" id="name" placeholder="Your Name" required />
     <input type="number" id="pockets" placeholder="Number of Pockets" required min="0" />
