--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <!-- Autoplay MP3 when page loads -->
   <audio id="background-audio" autoplay>
-    <source src="your-audio-file.mp3" type="audio/mpeg">
+    <source src="https://jackodriley.github.io/pocketwang/pocketwhack.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
