--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     input::placeholder {
       color: green;
     }
-    h1, h2 {
+    h1, h2, h3 {
       text-align: center;
     }
     table {
@@ -161,6 +161,15 @@
       max-width: 100%;
       height: auto;
     }
+    /* Style for the Daily Winners table */
+    #winnersTable th, #winnersTable td {
+      font-size: 4vw;
+    }
+    @media (min-width: 600px) {
+      #winnersTable th, #winnersTable td {
+        font-size: 16px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -216,6 +225,20 @@
     </thead>
     <tbody>
       <!-- Yesterday's leaderboard entries will be injected here -->
+    </tbody>
+  </table>
+
+  <!-- New Daily Winners Table -->
+  <h2>Daily Winners</h2>
+  <table id="winnersTable">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Winner</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Daily winners will be injected here -->
     </tbody>
   </table>
 
