--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     }
     /* Apply animation to each letter with a delay */
     h1.title span {
-      animation: wave 1s ease-in-out infinite;
+      animation: wave 1.5s ease-in-out;
     }
     h1.title span:nth-child(1) { animation-delay: 0s; }
     h1.title span:nth-child(2) { animation-delay: 0.1s; }
