--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     /* Basic styling */
     body {
       font-family: 'VT323', monospace;
-      background-color: white;
+      background-color: black; /* Reverted to black */
       color: green;
       margin: 20px;
     }
@@ -60,7 +60,7 @@
 
     form { margin-bottom: 30px; text-align: center; }
     input, button {
-      background-color: white;
+      background-color: black; /* Reverted to black */
       color: green;
       border: 1px solid green;
       font-family: 'VT323', monospace;
@@ -121,7 +121,7 @@
       display: block;
       margin: 10px auto;
       font-size: 5vw;
-      background-color: white;
+      background-color: black; /* Reverted to black */
       color: green;
       border: 1px solid green;
       font-family: 'VT323', monospace;
@@ -155,35 +155,6 @@
         font-size: 14px;
       }
     }
-    /* Style for RIP MAGGIE text */
-    .rip-text {
-      text-align: center;
-      color: black;
-      margin-top: 20px;
-      font-size: 6vw;
-    }
-    .rip-subtext {
-      text-align: center;
-      color: black;
-      font-size: 4vw;
-    }
-    @media (min-width: 600px) {
-      .rip-text {
-        font-size: 24px;
-      }
-      .rip-subtext {
-        font-size: 16px;
-      }
-    }
-    /* Style for the embedded GIF */
-    .gif-container {
-      text-align: center;
-      margin-top: 20px;
-    }
-    .gif-container img {
-      max-width: 100%;
-      height: auto;
-    }
     /* Style for the Daily Winners table */
     #winnersTable th, #winnersTable td {
       font-size: 4vw;
@@ -196,6 +167,9 @@
   </style>
 </head>
 <body>
+
+  <!-- Added 'WEEKEND +5' title above the main title -->
+  <h1>WEEKEND +5</h1>
 
   <!-- Large Title with letters in different primary colors -->
   <h1 class="title">
@@ -211,15 +185,6 @@
     <br />
     <button type="submit">Submit</button>
   </form>
-
-  <!-- Added RIP MAGGIE and dates -->
-  <h2 class="rip-text">RIP MAGGIE</h2>
-  <p class="rip-subtext">28.12.34 - 27.9.24</p>
-
-  <!-- Embedded GIF -->
-  <div class="gif-container">
-    <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeTFhbWw0M3dhcXNvYmw0bHphZ3JrazF0ZHphbG0zaGNzanAyM2ZwbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Q9ASS7CxJPbEqRW74e/giphy.webp" alt="Maggie GIF">
-  </div>
 
   <!-- Div to display the congratulatory message -->
   <div id="message"></div>
