--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       font-size: 10vw; /* Responsive font size */
       text-align: center;
       margin-bottom: 20px;
+      margin-top: 0; /* Remove any top margin */
     }
     h1.title span {
       display: inline-block; /* Needed for animation */
@@ -44,7 +45,7 @@
     }
     /* Apply animation to each letter with a delay */
     h1.title span {
-      animation: wave 1.5s ease-in-out;
+      animation: wave 1s ease-in-out;
     }
     h1.title span:nth-child(1) { animation-delay: 0s; }
     h1.title span:nth-child(2) { animation-delay: 0.1s; }
@@ -75,6 +76,7 @@
     }
     h1, h2, h3 {
       text-align: center;
+      margin: 0; /* Remove default margins */
     }
     table {
       width: 100%;
@@ -169,10 +171,10 @@
 <body>
 
   <!-- Added 'WEEKEND +5' title above the main title -->
-  <h1>WEEKEND +5</h1>
+  <h1 style="margin-bottom: 10px;">WEEKEND +5</h1>
 
   <!-- Large Title with letters in different primary colors -->
-  <h1 class="title">
+  <h1 class="title" style="margin-top: 10px; margin-bottom: 20px;">
     <span>P</span><span>O</span><span>C</span><span>K</span><span>E</span><span>T</span><span>W</span><span>H</span><span>A</span><span>C</span><span>K</span>
   </h1>
 
@@ -261,6 +263,12 @@
       playAudio();
     });
   </script>
+
+  <!-- Audio element for the submit sound effect -->
+  <audio id="submit-sound">
+    <source src="YOUR_MP3_URL" type="audio/wav">
+    Your browser does not support the audio element.
+  </audio>
 
   <!-- Footer -->
   <footer>
