--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
   <!-- Audio element for the submit sound effect -->
   <audio id="submit-sound">
-    <source src="YOUR_MP3_URL" type="audio/wav">
+    <source src="sad dads club wake word.wav" type="audio/wav">
     Your browser does not support the audio element.
   </audio>
 
