--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!-- Div to display the congratulatory message -->
   <div id="message"></div>
 
-  <h2>Today's Leaderboard</h2>
+  <h2 >Today's Leaderboard</h2>
   <p class="subheading">Lowest unique number of pockets over 0 wins!</p>
   <table id="todayLeaderboard">
     <thead>
@@ -205,7 +205,7 @@
     </tbody>
   </table>
 
-  <h2>Yesterday's Leaderboard</h2>
+  <h2 style="margin-bottom: 10px;">Yesterday's Leaderboard</h2>
   <table id="yesterdayLeaderboard">
     <thead>
       <tr>
@@ -219,7 +219,7 @@
   </table>
 
   <!-- New Daily Winners Table -->
-  <h2>Daily Winners</h2>
+  <h2 style="margin-bottom: 10px;">Daily Winners</h2>
   <table id="winnersTable">
     <thead>
       <tr>
