--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
 
   <!-- Added 'WEEKEND +5' title above the main title -->
-  <h1 style="margin-bottom: 10px;">AND ON THE SEVENTH DAY, THE LORD CREATED/h1>
+  <h1 style="margin-bottom: 10px;">AND ON THE SEVENTH DAY, THE LORD MADE</h1>
 
   <!-- Large Title with letters in different primary colors -->
   <h1 class="title" style="margin-top: 10px; margin-bottom: 20px;">
