--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <body>
 
   <!-- Added 'WEEKEND +5' title above the main title -->
-  <h1 style="margin-bottom: 10px;">AND ON THE SEVENTH DAY, THE LORD MADE</h1>
+  <h1 style="margin-bottom: 10px;">AND ON THE SEVENTH DAY,</h1>
 
   <!-- Large Title with letters in different primary colors -->
   <h1 class="title" style="margin-top: 10px; margin-bottom: 20px;">
@@ -180,7 +180,7 @@
 
   <!-- The Play Audio button will be inserted here when needed -->
 
-  <h1>...AND IT WAS GOOD</h1>
+  <h1>TOOK A BREAK...</br> ...AND IT WAS GOOD</h1>
   
 
   <!-- Footer -->
