--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>POCKETWHACK</title>
+  <title>WHACKETPOCK</title>
   <!-- Responsive Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Include Google Font VT323 -->
@@ -22,8 +22,42 @@
     }
     h1.title span {
       display: inline-block; /* Needed for animation */
-      color: green;
+      color: red; /* Default color */
     }
+    /* Assign different colors to each letter */
+    h1.title span:nth-child(1) { color: red; }      /* W */
+    h1.title span:nth-child(2) { color: blue; }     /* H */
+    h1.title span:nth-child(3) { color: yellow; }   /* A */
+    h1.title span:nth-child(4) { color: green; }    /* C */
+    h1.title span:nth-child(5) { color: orange; }   /* K */
+    h1.title span:nth-child(6) { color: purple; }   /* E */
+    h1.title span:nth-child(7) { color: cyan; }     /* T */
+    h1.title span:nth-child(8) { color: magenta;}   /* P */
+    h1.title span:nth-child(9) { color: lime; }     /* O */
+    h1.title span:nth-child(10){ color: pink; }     /* C */
+    h1.title span:nth-child(11){ color: gold; }     /* K */
+
+    /* Animation styling */
+    @keyframes wave {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-20px); }
+    }
+    /* Apply animation to each letter with a delay */
+    h1.title span {
+      animation: wave 1s ease-in-out infinite;
+    }
+    h1.title span:nth-child(1) { animation-delay: 0s; }
+    h1.title span:nth-child(2) { animation-delay: 0.1s; }
+    h1.title span:nth-child(3) { animation-delay: 0.2s; }
+    h1.title span:nth-child(4) { animation-delay: 0.3s; }
+    h1.title span:nth-child(5) { animation-delay: 0.4s; }
+    h1.title span:nth-child(6) { animation-delay: 0.5s; }
+    h1.title span:nth-child(7) { animation-delay: 0.6s; }
+    h1.title span:nth-child(8) { animation-delay: 0.7s; }
+    h1.title span:nth-child(9) { animation-delay: 0.8s; }
+    h1.title span:nth-child(10){ animation-delay: 0.9s; }
+    h1.title span:nth-child(11){ animation-delay: 1s; }
+
     /* Grid styling */
     #game-grid {
       display: grid;
@@ -40,13 +74,11 @@
       position: relative;
     }
     .pocket {
-      background-color: green;
-      width: 80%;
-      height: 80%;
+      width: 100%;
+      height: 100%;
       position: absolute;
-      top: 10%;
-      left: 10%;
-      cursor: pointer;
+      top: 0;
+      left: 0;
     }
     /* UI elements */
     #scoreboard {
@@ -104,8 +136,13 @@
 
   <!-- Game Title -->
   <h1 class="title">
-    <span>POCKETWHACK</span>
+    <span>W</span><span>H</span><span>A</span><span>C</span><span>K</span><span>E</span><span>T</span><span>P</span><span>O</span><span>C</span><span>K</span>
   </h1>
+
+  <!-- Start Game Button -->
+  <div style="text-align: center; margin-bottom: 20px;">
+    <button id="start-button">Start Game</button>
+  </div>
 
   <!-- Scoreboard -->
   <div id="scoreboard">
@@ -118,6 +155,21 @@
     <!-- Grid cells will be generated here -->
   </div>
 
+  <!-- High Scores -->
+  <h3 style="text-align: center;">High Scores</h3>
+  <table id="highscore-table">
+    <thead>
+      <tr>
+        <th>Rank</th>
+        <th>Name</th>
+        <th>Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- High scores will be loaded here -->
+    </tbody>
+  </table>
+
   <!-- Game Over Modal -->
   <div id="game-over-modal">
     <h2>Game Over</h2>
@@ -129,19 +181,6 @@
         <button type="submit">Submit Score</button>
       </form>
     </div>
-    <h3>High Scores</h3>
-    <table id="highscore-table">
-      <thead>
-        <tr>
-          <th>Rank</th>
-          <th>Name</th>
-          <th>Score</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- High scores will be loaded here -->
-      </tbody>
-    </table>
     <button onclick="restartGame()">Play Again</button>
   </div>
 
