--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -22,7 +22,6 @@
     }
     h1.title span {
       display: inline-block; /* Needed for animation */
-      color: red; /* Default color */
     }
     /* Assign different colors to each letter */
     h1.title span:nth-child(1) { color: red; }      /* W */
@@ -73,7 +72,7 @@
       padding-bottom: 100%; /* To make squares */
       position: relative;
     }
-    .pocket {
+    .pocket, .potato {
       width: 100%;
       height: 100%;
       position: absolute;
