--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -6,7 +6,7 @@
   <!-- Responsive Meta Tag -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Include Google Font VT323 -->
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
   <style>
     /* Basic styling */
     body {
