--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
   <!-- The Play Audio button will be inserted here when needed -->
 
-  <h1><a href="https://jackodriley.github.io/pocketwang/game/whacketpock.html">⭐️FINAL EDITION SPECIAL EVENT⭐️</a></h1>
+  <h1>⭐️<a href="https://jackodriley.github.io/pocketwang/game/whacketpock.html">FINAL EDITION SPECIAL EVENT</a>⭐️</h1>
 
   <h1><a href="https://jackodriley.github.io/pocketwang/working-backup.html">REGULAR OL' POCKETWHACK</a></h1>
   
