--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -248,5 +248,8 @@
   <!-- Include your JavaScript code as a module -->
   <script type="module" src="app.js"></script>
 
+  <footer>
+    &copy; POTATOCORP 2024
+  </footer>
 </body>
 </html>
