--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
         font-size: 16px;
       }
     }
+
+  .special-event {
+    color: yellow;
+  }
+  
+  .regular-event {
+    color: lime;
+  }
+
   </style>
 </head>
 <body>
@@ -178,9 +187,9 @@
 
   <!-- The Play Audio button will be inserted here when needed -->
 
-  <h1>⭐️ <a href="https://jackodriley.github.io/pocketwang/game/whacketpock.html">FINAL EDITION SPECIAL EVENT</a> ⭐️</h1>
+  <h1 class="special-event">⭐️ <a href="https://jackodriley.github.io/pocketwang/game/whacketpock.html">FINAL EDITION SPECIAL EVENT</a> ⭐️</h1>
 </br></br>
-  <h1><a href="https://jackodriley.github.io/pocketwang/working-backup.html">REGULAR OL' POCKETWHACK</a></h1>
+  <h1 class="regular-event"><a href="https://jackodriley.github.io/pocketwang/working-backup.html">REGULAR OL' POCKETWHACK</a></h1>
   
 
   <!-- Footer -->
