fix timer issue

--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -185,7 +185,7 @@
 
   <!-- Rules Text -->
   <div id="rules">
-    Whack Pockets 👖 - Dodge Potatoes 🥔 - Missing a pocket or whacking a potato costs you a life ☠️
+    Whack all the Pockets 👖 - Dodge the Potatoes 🥔 - Lose a life for missing a pocket or whacking a potato ☠️
   </div>
 
   <!-- Start Game Button -->
@@ -249,7 +249,7 @@
   <script type="module" src="app.js"></script>
 
   <footer>
-    &copy; POTATOCORP 2024
+    &copy; POTATOCORP 2024. v0.1
   </footer>
 </body>
 </html>
