--- a/game/whacketpock.html
+++ b/game/whacketpock.html
@@ -248,8 +248,8 @@
   <!-- Include your JavaScript code as a module -->
   <script type="module" src="app.js"></script>
 
-  <footer><center>
-    &copy; POTATOCORP 2024 - v0.1
+  </br><footer><center>
+    &copy; POTATOCORP 2024 - v0.2
   </center></footer>
 </body>
 </html>
