--- a/game/game-backup.html
+++ b/game/game-backup.html
@@ -180,8 +180,73 @@
 
   <!-- Game Title -->
   <h1 class="title">
-    <span>G</span><span>O</span></br><span>T</span><span>O</span></br><span>S</span><span>L</span><span>E</span><span>E</span><span>P</span>
+    <span>W</span><span>H</span><span>A</span><span>C</span><span>K</span><span>E</span><span>T</span><span>P</span><span>O</span><span>C</span><span>K</span>
   </h1>
+
+  <!-- Rules Text -->
+  <div id="rules">
+    Whack all the Pockets 👖 - Dodge the Potatoes 🥔 - Lose a life for missing a pocket or whacking a potato ☠️
+  </div>
+
+  <!-- Start Game Button -->
+  <div id="start-button-container">
+    <button id="start-button">Start Game</button>
+  </div>
+
+  <!-- Scoreboard -->
+  <div id="scoreboard">
+    <span id="score">Score: 0</span>
+    <span id="lives">Lives: 3</span>
+  </div>
+
+  <!-- Game Grid -->
+  <div id="game-grid">
+    <!-- Grid cells will be generated here -->
+  </div>
+
+  <!-- High Scores -->
+  <h3 style="text-align: center;">High Scores</h3>
+  <table id="highscore-table">
+    <thead>
+      <tr>
+        <th>Rank</th>
+        <th>Name</th>
+        <th>Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- High scores will be loaded here -->
+    </tbody>
+  </table>
+
+  <!-- Game Over Modal -->
+  <div id="game-over-modal">
+    <h2>Game Over</h2>
+    <p>Your Score: <span id="final-score"></span></p>
+    <div id="highscore-section">
+      <p>Enter your name:</p>
+      <form id="highscore-form">
+        <input type="text" id="player-name" placeholder="Your Name" required>
+        <button type="submit">Submit Score</button>
+      </form>
+    </div>
+    <button id="play-again-button">Play Again</button>
+  </div>
+
+  <!-- Background Music -->
+  <audio id="background-music" loop>
+    <source src="https://jackodriley.github.io/pocketwang/pocketwhack.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Pocket Click Sound Effect -->
+  <audio id="pocket-click-sound">
+    <source src="pocket_click.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Include your JavaScript code as a module -->
+  <script type="module" src="app.js"></script>
 
   </br><footer><center>
     &copy; POTATOCORP 2024 - v0.2
